--- a/css/styles.css
+++ b/css/styles.css
@@ -345,9 +345,9 @@ background-color: var(--main-text-color);
     width: 370px;
     height: 70px;
     margin: 0;
-    padding-top: 27px;
-    padding-bottom: 27px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     font-size: 14px;
     line-height: 1.14;
@@ -443,7 +443,8 @@ background-color: var(--main-text-color);
     border-radius: 4px;
     color: var(--links-color);
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-links:hover,
 .clients-links:focus {
@@ -501,13 +502,12 @@ background-color: var(--main-text-color);
     margin-bottom: 30px;
 }
 .card-link {
+    display: block;
     text-decoration: none;
-}
-.cards > .item {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.cards > .item:hover,
-.cards > .item:focus {
+.card-link:hover,
+.card-lonk:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
                 0px 4px 4px rgba(0, 0, 0, 0.06),
                 1px 4px 6px rgba(0, 0, 0, 0.16);
