--- a/css/styles.css
+++ b/css/styles.css
@@ -584,14 +584,16 @@ background-color: var(--main-text-color);
     
     width: 528px;
     height: 581px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     background-color: var(--third-text-color);
     border-radius: 4px;
 
-    transform: translate(-50%, -50%) scale(0.9);
+    transform: translate(-50%, -50%) scale(1);
     transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden .modal {
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%) scale(0.9);
 }
 .close-button {
     position: absolute;
@@ -607,4 +609,140 @@ background-color: var(--main-text-color);
     border-radius: 15px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     cursor: pointer;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-button:hover,
+.close-button:focus {
+    color: var(--hover-color);
+}
+.modal-appeal {
+    margin-bottom: 12px;
+    display: block;
+    font-size: 20px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    text-align: center;
+}
+.modal-form {
+    width: 448px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.form-label {
+    margin-bottom: 4px;
+
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--secondary-text-color);
+}
+.fields > .item {
+    display: flex;
+    flex-direction: column;
+}
+.form-field {
+    height: 40px;
+    width: 100%;
+    margin-bottom: 10px;
+    padding-left: 42px;
+    display: block;
+    cursor: pointer;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-field:focus {
+    border: 1px solid var(--hover-color);
+    outline: var(--hover-color);
+}
+.form-field:focus+.form-icon {
+    color: var(--hover-color);
+}
+
+.form-comment {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+.text-field {
+    resize: none;
+    width: 100%;
+    height: 120px;
+    margin-bottom: 20px;
+    padding: 12px 16px;
+    cursor: pointer;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.text-field:focus {
+    border: 1px solid var(--hover-color);
+    outline: var(--hover-color);
+}
+.text-field::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+.form-container {
+    position: relative;
+}
+.form-icon {
+    position: absolute;
+    top: 11px;
+    left: 12px;
+    fill: currentColor;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.terms-text {
+    display: block;
+    width: 401px;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
+    
+}
+.terms-link {
+    color: var(--hover-color);
+}
+.terms-icon {
+    position: absolute;
+    left: 11px;
+    fill: currentColor;
+    color: var(--third-text-color);
+    border-radius: 2px;
+}
+.terms-checkbox:checked ~ .terms-icon {
+    background-color: var(--hover-color);
+}
+.form-checkbox {
+    position: relative;
+    margin: 0;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.terms-border {
+    margin-right: 8px;
+}
+.modal-button {
+    width: 200px;
+    height: 50px;
+    border-radius: 4px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
+
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--third-text-color);
+    background-color: var(--hover-color);
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
