--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --secondary-text-color: #757575;
     --third-text-color: #FFFFFF;
     --hover-color: #2196F3;
+    --dark-hover: #188CE8;
     --border-color: #ECECEC;
     --cards-border: #EEEEEE;
     --links-color: #AFB1B8;
@@ -168,6 +169,7 @@ body {
     display: flex;
 }
 .contacts-block {
+    width: 231px;
     margin-right: 70px;
 }
 .links-block {
@@ -632,8 +634,7 @@ background-color: var(--main-text-color);
     
     width: 528px;
     height: 581px;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding: 40px 40px;
     background-color: var(--third-text-color);
     border-radius: 4px;
 
@@ -671,12 +672,8 @@ background-color: var(--main-text-color);
     letter-spacing: 0.03em;
     text-align: center;
 }
-.modal-form {
-    width: 448px;
-    margin-left: auto;
-    margin-right: auto;
-}
 .form-label {
+    display: block;
     margin-bottom: 4px;
 
     font-size: 12px;
@@ -684,14 +681,9 @@ background-color: var(--main-text-color);
     letter-spacing: 0.01em;
     color: var(--secondary-text-color);
 }
-.fields > .item {
-    display: flex;
-    flex-direction: column;
-}
 .form-field {
     height: 40px;
     width: 100%;
-    margin-bottom: 10px;
     padding-left: 42px;
     display: block;
     cursor: pointer;
@@ -717,6 +709,7 @@ background-color: var(--main-text-color);
     resize: none;
     width: 100%;
     height: 120px;
+    display: block;
     margin-bottom: 20px;
     padding: 12px 16px;
     cursor: pointer;
@@ -736,6 +729,7 @@ background-color: var(--main-text-color);
 }
 .form-container {
     position: relative;
+    margin-bottom: 10px;
 }
 .form-icon {
     position: absolute;
@@ -745,34 +739,31 @@ background-color: var(--main-text-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .terms-text {
-    display: block;
-    width: 401px;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
-    
 }
 .terms-link {
     color: var(--hover-color);
 }
 .terms-icon {
     position: absolute;
-    left: 11px;
+    left: 14px;
     fill: currentColor;
     color: var(--third-text-color);
     border-radius: 2px;
 }
-.terms-checkbox:checked ~ .terms-icon {
-    background-color: var(--hover-color);
-}
-.form-checkbox {
+.checkbox-container {
     position: relative;
-    margin: 0;
+
+    padding-left: 14px;
     margin-bottom: 30px;
     display: flex;
-    justify-content: center;
     align-items: center;
+}
+.terms-checkbox:checked ~ .terms-icon {
+    background-color: var(--hover-color);
 }
 .terms-border {
     margin-right: 8px;
@@ -793,4 +784,9 @@ background-color: var(--main-text-color);
     background-color: var(--hover-color);
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);;
+}
+.modal-button:hover,
+.modal-button:focus {
+    background-color: var(--dark-hover);
 }
